- set word-break to break-all to prevent content overflow  - bump version

--- a/src/index.styl
+++ b/src/index.styl
@@ -5,6 +5,7 @@
   vertical-align: initial
 .ql-container
   font-size: 1em
+  word-break: break-all
 .ql-tool
   position: sticky
   top: 0
